# statbootstrap

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml
src/statbootstrap/: __init__.py  _backend.py  _frontend.py  _types.py
